# xrouter

./: .gitignore  README.md  lint.sh  main.py  pyproject.toml
docs/: bootstrap.md  design.md  interfaces.md  ipv6.md  misc.md  vlan-bridge.md
xrouter/cli/: __init__.py  apply.py  base.py  fetch.py  reload.py  setup.py
xrouter/config/: __init__.py  xrouter.py
xrouter/gwlib/: __init__.py  config.py  gwlib.py
xrouter/gwlib/config/: __init__.py  container.py  dnsmasq.py  firewall.py  interface.py  route.py
xrouter/templates/: 99-xrouter.sysctl.conf  firewall-custom.nft  firewall.nft  iproute2-group  networkd-dispatcher-routable-hook.sh  networkd.conf  startup-xrouter.service
xrouter/templates/container/: podman-container.service
xrouter/templates/dnsmasq/: dhcp.conf  dns.conf  dnsmasq.conf
xrouter/templates/interfaces/: lo.network
xrouter/templates/interfaces/podman-bridge/: iface.netdev  iface.network
xrouter/templates/interfaces/pppoe/: iface.network  ip-up  peer  pppd@.service
xrouter/templates/interfaces/vlan-bridge/: vlan-bridge-svi.network  vlan-bridge.netdev  vlan-bridge.network
xrouter/templates/interfaces/wireguard/: iface.netdev  iface.network  wg.conf  wgsd-client@service  wgsd-client@timer
xrouter/templates/systemd/network/: vlan-bridge-port.network  vlan-bridge-svi.netdev  vlan-bridge-svi.network  vlan-bridge.network
xrouter/utils/: cidr.py  download.py  install_file.py  jinja.py  run_as_root.py  single_instance.py
