[project]
name = "xrouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.28.1",
    "ipython>=9.3.0",
    "jinja2>=3.1.6",
    "netaddr>=1.3.0",
    "pydantic>=2.11.7",
    "pyroute2>=0.9.2",
    "pyyaml>=6.0.2",
    "sh>=2.2.2",
    "typer>=0.16.0",
]

[project.scripts]
gw = "xrouter.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xrouter"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.0",
    "ruff>=0.11.13",
    "types-netaddr>=1.3.0.20240530",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.ruff]
line-length = 120
output-format = "full"
target-version = "py313"

[tool.ruff.lint]
# 在 --fix 时不自动修复：
# * F401 unused import
# * unused local vars
unfixable = ["F401", "F841"]

extend-ignore = []
extend-select = [
    # W292 No newline at end of file
    # W605 Invalid excape sequence: '\c'
    "W",
    # mccabe
    "C901",
    # isort
    "I",
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.isort]
known-first-party = ["xrouter"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.mypy]
plugins = ["pydantic.mypy"]
show_error_codes = true
warn_unused_ignores = true
check_untyped_defs = true
enable_error_code = ["unused-awaitable", "unused-coroutine"]
exclude = []

[[tool.mypy.overrides]]
module = [
    "sh",
]
ignore_missing_imports = true
